fix(tes-consultas): fix border overflow on mobile
The black border between the thead and tbody was overflowing on mobile
screens. This commit adjusts the border to stay inside the table limits.

--- a/src/scss/components/eden/_eden-c-table.scss
+++ b/src/scss/components/eden/_eden-c-table.scss
@@ -1,7 +1,6 @@
 @use '../../abstracts' as *;
 
 .eden-c-table {
-    width: 100%;
     margin-block-start: var(--eden-sys-spacing-sm);
     margin-block-start: var(--eden-sys-spacing-xs);
     padding: var(--eden-sys-spacing-xs);
